--- a/Coinbase Commerce Lib/Coinbase Commerce Lib/Coinbase Commerce Lib.csproj
+++ b/Coinbase Commerce Lib/Coinbase Commerce Lib/Coinbase Commerce Lib.csproj
@@ -4,11 +4,44 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Coinbase.Commerce</RootNamespace>
+    <PackageId>Coinbase.Commerce.Lib</PackageId>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Coinbase Commerce Lib</Title>
+    <Version>2.0.0</Version>
+    <Authors>Aeroverra</Authors>
+    <Company>AutoBuy LLC</Company>
+    <Description>A library for Coinbase Commerce built on .Net 5</Description>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageTags>Coinbase Commerce, Coinbase, AutoBuy</PackageTags>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Aeroverra/Coinbase_Commerce_CSharp</RepositoryUrl>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="RestSharp" Version="106.11.7" />
+    <None Include="..\..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="108.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
